---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "fn id(a) { a }\npub fn foo() {\n  {\n    let x = 1\n    x\n  }\n  |> id\n}"
---
module rec my.``mod``
let private id (a: 'u8) = begin
    a
end
let foo () = begin
    begin
        let _pipe = begin
            let x = 1
            x
        end
        (id (_pipe))
    end
end
